# Vocabulary

./: .dockerignore  .gitignore  Dockerfile  INIT.ini  Irregular_verbs  README.md  Repeating of the learned words  TODO.md  backup.py  backup_auth.py  backup_setup.py  common_funcs.py  constants.py  content  docker-compose.yml  examples.py  id.txt  main.py  pyproject.toml  requirements.txt  setup.cfg  tests.py  todo.md
.github/workflows/: codeql-analysis.yml  docker-image.yml  python-app.yml
docs/: examples.md  todo.md
program_data/ui/: AlertWindow.ui
src/: setup.py
src/backup/: __init__.py  backup.py  backup_setup.py  setup.py
src/docs/: __init__.py  create_doc.py
src/examples/: __init__.py  examples.py
src/main/: common_funcs.py  constants.py  main.py
src/repeat/: __init__.py  repeat.py  repeat_setup.py  setup.py
src/repeat/ui/: ExamplesWindow.ui
src/trouble/: trouble.py
src/words/: __init__.py  words.py
tests/: conftest.py  examples_test.py  test_backup.py  test_common_funcs.py  test_examples.py  tests.py
ui/: AlertWindow.ui  MainWindow.ui  MessageWindow.ui  ShowWindow.ui
vocabulary/: main.py  migrator.py
vocabulary/common/: database.py  log.py  settings.py
vocabulary/examples/: db.py  routes.py  schemas.py
vocabulary/models/: models.py
vocabulary/static/: styles.css
vocabulary/templates/: view.html
vocabulary/view/: routes.py
vocabulary/words/: db.py  routes.py  schemas.py
