[tool.poetry]
name = "vocabulary"
version = "1.0.0"
description = "Expand your vocabulary"
authors = ["kunansy <kolobov.kirill@list.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "~0.78.0"
pydantic = "~1.9.0"
SQLAlchemy = "~1.4.36"
rnc = "~0.9.0"
uvloop = "~0.16.0"
asyncpg = "~0.25.0"
uvicorn = "~0.17.6"
environs = "~9.5.0"
Jinja2 = "~3.1.2"

[tool.poetry.dev-dependencies]
pytest = "~7.1.2"
requests = "~2.26.0"
mypy = "~0.950"
flake8 = "~4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=58.0", "wheel>=0.37.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning"
]